# openWakeWord-TTS

./: .gitignore  README.md  api.py  generate_audios.py  generate_config.py  jobs.json  main.py  pipeline.py  pyproject.toml
input_words/hola-ayud/: neg.txt  pos.txt
input_words/hola-pepito/: neg.txt
outputs/: README.md
outputs/hola-juan/config/20251003_142257/: hola-juan_v1_1_0.yaml
outputs/hola-juan/txt/20251003_142257/: neg.txt  pos.txt
outputs/hola-pepito/config/01-10-2025T13.41.00/: hola-pepito_0_0.yaml
outputs/hola-pepito/config/20251003_142211/: hola-pepito_v1_1_0.yaml
outputs/hola-pepito/models/01-10-2025T13.41.00/: hola-pepito_0_0.onnx  hola-pepito_0_0.tflite  hola-pepito_0_0_history.pkl
outputs/hola-pepito/txt/01-10-2025T13.41.00/: neg.txt
outputs/hola-pepito/txt/20251003_130917/: neg.txt  pos.txt
scripts/: augment.py  generate_config.py  generate_text.py  train.py  tts.py
scripts/helpers/: create_ssml.py  trim_audio.py
scripts/openwakeword/: __init__.py  data.py  metrics.py  train.py  utils.py
txt/hola-pepito/: positive_hola-pepito.txt
