[project]
name = "wake-word-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-cognitiveservices-speech>=1.46.0",
    "numpy>=2.3.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
]
